# AssistenteContexto

./: .gitignore  README.md  configs.py  home.py  pyproject.toml  test.ipynb  utils.py
pages/: 01_🛠_Administracao.py  02_👨🏻‍💻_Debug.py  administracao.py
